<resources>
    <string name="app_name">My App Portfolio</string>
    <string name="action_settings">Settings</string>
    <string name="MyNanodegreeApps">My Nanodegree Apps!</string>
    <string name="SpotifyStreamer">Spotify Streamer</string>
    <string name="ScoresApp">Scores App</string>
    <string name="LibraryApp">Library App</string>
    <string name="BuildItBigger">Build IT Bigger</string>
    <string name="XYZReader">XYZ Reader</string>
    <string name="CapstoneMyOwnApp">CAPSTONE: MY OWN APP</string>
</resources>
