<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.arun.myappportfolio.MainActivity"
    tools:showIn="@layout/activity_main"
    android:weightSum="1"
    android:background="#f3f3f3">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/MyNanodegreeApps"
        android:id="@+id/nanoDegreeAppsText"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/SpotifyStreamer"
        android:id="@+id/spotifyStreamerButton"
        android:layout_below="@+id/nanoDegreeAppsText"
        android:layout_marginTop="50dp"
        android:layout_alignLeft="@+id/nanoDegreeAppsText"
        android:layout_alignStart="@+id/nanoDegreeAppsText"
        android:layout_alignRight="@+id/nanoDegreeAppsText"
        android:layout_alignEnd="@+id/nanoDegreeAppsText"
        android:background="#38bfc3" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ScoresApp"
        android:id="@+id/scoresAppButton"
        android:layout_marginTop="7dp"
        android:layout_below="@+id/spotifyStreamerButton"
        android:layout_alignLeft="@+id/spotifyStreamerButton"
        android:layout_alignStart="@+id/spotifyStreamerButton"
        android:layout_alignRight="@+id/spotifyStreamerButton"
        android:layout_alignEnd="@+id/spotifyStreamerButton"
        android:background="#38bfc3" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/LibraryApp"
        android:id="@+id/libraryAppButton"
        android:layout_below="@+id/scoresAppButton"
        android:layout_alignLeft="@+id/scoresAppButton"
        android:layout_alignStart="@+id/scoresAppButton"
        android:layout_alignRight="@+id/scoresAppButton"
        android:layout_alignEnd="@+id/scoresAppButton"
        android:layout_marginTop="7dp"
        android:background="#38bfc3" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/BuildItBigger"
        android:id="@+id/builtItBiggerButton"
        android:layout_marginTop="7dp"
        android:layout_below="@+id/libraryAppButton"
        android:layout_alignLeft="@+id/libraryAppButton"
        android:layout_alignStart="@+id/libraryAppButton"
        android:layout_alignRight="@+id/libraryAppButton"
        android:layout_alignEnd="@+id/libraryAppButton"
        android:background="#38bfc3" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/XYZReader"
        android:id="@+id/xyzReaderButton"
        android:layout_marginTop="7dp"
        android:layout_below="@+id/builtItBiggerButton"
        android:layout_alignLeft="@+id/builtItBiggerButton"
        android:layout_alignStart="@+id/builtItBiggerButton"
        android:layout_alignRight="@+id/builtItBiggerButton"
        android:layout_alignEnd="@+id/builtItBiggerButton"
        android:background="#38bfc3" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/CapstoneMyOwnApp"
        android:id="@+id/capstoneButton"
        android:layout_below="@+id/xyzReaderButton"
        android:layout_alignLeft="@+id/xyzReaderButton"
        android:layout_alignStart="@+id/xyzReaderButton"
        android:layout_marginTop="7dp"
        android:layout_alignRight="@+id/xyzReaderButton"
        android:layout_alignEnd="@+id/xyzReaderButton"
        android:background="#F08C35" />

</RelativeLayout>
